Fri Feb 16 10:57:33 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/Aggregate.java: RawOEMM.aggregate() is
	replaced by a static method Aggregate.compute() which can be invoked
	on an OEMM.
	* src/org/jcae/mesh/oemm/RawOEMM.java: Removed.

Thu Feb 15 10:44:59 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/TraversalProcedure.java: Modify signature of
	all methods, the OEMM instance which is walked through is passed as
	first parameter.
	* src/org/jcae/mesh/oemm/OEMMNode.java: Remove 'topDir' member.
	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/xmldata/MeshToSoupConvert.java: Fix handling of
	org.jcae.mesh.Mesher.minFace and org.jcae.mesh.Mesher.maxFace options.
	* src/org/jcae/mesh/oemm/RawOEMM.java: Fix several minor bugs in
	aggregate().

Wed Feb 14 17:28:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/RawOEMM.java: Replace own implementation
	of linked lists by ArrayList.
	* src/org/jcae/mesh/oemm/RawStorage.java: In dispatch(), use a map
	for buffering values on octree cells instead of OEMMNode.extra.
	* src/org/jcae/mesh/oemm/OEMMNode.java: Remove 'extra' member.

Wed Feb 14 14:50:37 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/Storage.java
	  src/org/jcae/mesh/oemm/RawOEMM.java
	  src/org/jcae/mesh/oemm/OEMM.java
	  src/org/jcae/mesh/oemm/RawStorage.java: Rename OEMM.nr_levels
	into OEMM.depth; this field now always store OEMM depth, and is
	set as "private transient".

Tue Feb 13 15:34:15 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Previous
	fix was incorrect, an edge must not be contracted if any of its
	endpoints is not writable, because its neighborhood is not fully
	known.

Mon Feb 12 12:46:06 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
